services/argo-rollouts/resources/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: argo-rollouts
  labels:
    name: argo-rollouts
