services/argo-rollouts/resources/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo-rollout-dashboard
spec:
  hostnames:
  - rollout.gitops.k8s.cguertin.dev
  parentRefs:
  - name: envoy-gateway
    namespace: envoy-gateway-system
  rules:
  - matches:
    - path:
        type: Exact
        value: /
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplaceFullPath
          replaceFullPath: /rollouts
    backendRefs:
    - name: argo-rollouts-dashboard
      port: 3100
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: argo-rollouts-dashboard
      port: 3100
