services/argo-rollouts/resources/security-policy.yml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: argo-rollouts-oauth
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: argo-rollout-dashboard
  extAuth:
    headersToExtAuth:
    - cookie
    - x-forwarded-proto
    - x-forwarded-host
    - x-forwarded-uri
    http:
      backendRefs:
      - name: oauth2-proxy
        namespace: kube-system
        port: 4180
      path: /oauth2
      headersToBackend:
      - x-auth-request-user
      - x-auth-request-email
      - x-auth-request-access-token
      headersToClient:
      - location
      - set-cookie
